CMAKE_MINIMUM_REQUIRED (VERSION 3.10)

PROJECT (IAMTHEWORLD)

SET (CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/build/bin)
SET (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/build/bin)
SET (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/build/bin)

LINK_DIRECTORIES (${PROJECT_SOURCE_DIR}/build/bin)

ADD_SUBDIRECTORY (MyLib)
ADD_SUBDIRECTORY (LibTest)
ADD_SUBDIRECTORY (DesignPattern)
ADD_SUBDIRECTORY (CellularAutomata)