CMAKE_MINIMUM_REQUIRED (VERSION 3.10)

PROJECT (LibTest)

INCLUDE_DIRECTORIES (../MyLib)

#SET (EXECUTABLE_OUTPUT_PATH ./build)

AUX_SOURCE_DIRECTORY (./src SRC_DIR)

LINK_DIRECTORIES (../MyLib/lib)

ADD_EXECUTABLE (Test ${SRC_DIR})

TARGET_LINK_LIBRARIES(Test libObject.dll)
TARGET_LINK_LIBRARIES(Test libTime.dll)
