INCLUDE_DIRECTORIES(./include)
INCLUDE_DIRECTORIES(../Config)

AUX_SOURCE_DIRECTORY(./src DIR_SRCS)

ADD_LIBRARY (Basic SHARED ${DIR_SRCS})
SET_TARGET_PROPERTIES (Basic PROPERTIES PREFIX "")

AUX_SOURCE_DIRECTORY(.. DIR_SRCS)

ADD_EXECUTABLE(Zero ${DIR_SRCS})

SET (LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin/lib)
SET (EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build)


